[tool.poetry]
name = "mimic"
version = "0.1.0"
description = "Benchmarking causal inference methods on semisynthetic EHRs"
authors = ["chathasphere <pgchatha@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
pandas = "^1.4.3"
Hydra = "^2.5"
torch = "^1.12.0"
pytorch-lightning = "^1.6.5"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
