[tool.poetry]
name = "mimic"
version = "0.1.0"
description = "Benchmarking causal inference methods on semisynthetic EHRs"
authors = ["chathasphere <pgchatha@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
pandas = "^1.4.3"
torch = "^1.12.0"
pytorch-lightning = "^1.6.5"
jupyter = "^1.0.0"
tables = "^3.7.0"
h5py = "^3.7.0"
hydra-core = "^1.2.0"
matplotlib = "^3.5.3"
lifelines = "^0.27.2"
sklearn = "^0.0"
torch-tb-profiler = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
